[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "syseng_throughputs"
description = "Rubin Observatory System Engineering Repository of Throughput Components"
readme = "README.md"
license = { text = "GPL" }
classifiers = [ 
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
 ]
urls = {repository = "https://github.com/lsst-pst/syseng_throughputs" }
dynamic = [ "version" ]
dependencies = [
    "numpy",
    "rubin_sim >= 2",
]


[project.scripts]
calc_m5 = "syseng_throughputs.bin:calc_m5"

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = [ "" ]


[tool.pytest.ini_options]
addopts = "--ignore-glob=*/notebooks --ignore-glob=*/components"

[tool.mypy]
disallow_untyped_defs = "False"
ignore_missing_imports = "True"

[tool.black]
line-length = 110
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 110

[tool.ruff]
exclude = [
    "__init__.py", "notebooks",
]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "N802",
    "N803",
    "N806",
    "N812",
    "N815",
    "N816",
    "N999",
    "D107",
    "D105",
    "D102",
    "D104",
    "D100",
    "D200",
    "D205",
    "D400",
    "E712",
]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "N",  # pep8-naming
    "W",  # pycodestyle
]
extend-select = [
    "RUF100", # Warn about unused noqa
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.ruff.lint.pydocstyle]
convention = "numpy"
